--- a/.gitignore
+++ b/.gitignore
@@ -35,7 +35,7 @@ bower_components
 .lock-wscript
 
 # Compiled binary addons (https://nodejs.org/api/addons.html)
-build/Release
+build
 
 # Dependency directories
 node_modules/
@@ -72,6 +72,9 @@ typings/
 .env
 .env.test
 
+# local env files
+.env*.local
+
 # parcel-bundler cache (https://parceljs.org/)
 .cache
 
@@ -102,3 +105,20 @@ dist
 
 # TernJS port file
 .tern-port
+
+# testing
+coverage
+
+# next.js
+.next/
+out/
+
+# vercel
+.vercel
+
+# misc
+.DS_Store
+*.pem
+
+.pnp
+.pnp.js
